--- a/package.xml
+++ b/package.xml
@@ -8,7 +8,7 @@
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="abernard@todo.todo">abernard</maintainer>
-  <maintainer email="aplyer@github">aplyer</maintainer>
+  <!--maintainer email="aplyer@github">aplyer</maintainer-->
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
